Refocus CLAUDE.md on library development, not usage
Rewrite CLAUDE.md to orient agents working on jdiscript itself:
architecture overview, where to make changes, design principles,
development pitfalls, and how to use examples as integration tests.

Usage-oriented content (API reference, patterns, recipes) now lives
in the jdi-debug skill spec at .claude/skills/jdi-debug/.

https://claude.ai/code/session_01NNQiDABnd6WhySQcpjdp5Y